Add: 이력서 레이아웃 및 프로젝트 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@public/*": ["./public/*"],
       "@images/*": ["./src/images/*"],
+      "@data/*": ["./src/data/*"],
       "@util/*": ["./src/util/*"],
       "@components/*": ["./src/components/*"],
       "@redux/*": ["src/redux/*"],
